k8s/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: tinycode
  namespace: tinycode
spec:
  to:
    kind: Service
    name: tinycode
    weight: 100
  port:
    targetPort: 3000
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
